sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:21: error: not found: value PlusPetitQue
      if(PlusPetitQue(i,i+ecart))
         ^